[tool.poetry]
name = "kmua-bot-pyro"
version = "0.1.0"
description = ""
authors = ["krau <me@krau.top>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyrogram = {git = "https://github.com/KurimuzonAkuma/pyrogram.git"}
tgcrypto = "^1.2.5"
loguru = "^0.7.2"
dynaconf = "^3.2.4"
sqlalchemy = "^2.0.25"
psutil = "^5.9.8"
uvloop = "^0.19.0"
pillow = "^10.2.0"
pilmoji = "^2.0.4"
httpx = "^0.26.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
